# Stellar-K8s

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  Makefile  PROJECT  README.md  SECURITY.md  SOROBAN_DASHBOARD_COMPLETE.md  WASM_WEBHOOK_COMPLETE.md  WEBHOOK_BENCHMARK_COMPLETE.md  bundle.Dockerfile  example_nodeport_config.yaml  issue.md  manifest_validation_report.md  stellarnode-crd.yaml  test_encap.rs  test_pqc.rs
.cargo/: audit.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: benchmark.yml  chaos-tests.yml  ci.yml  performance-regression.yml  release.yml  webhook-benchmark.yml
benchmarks/: README.md  run-webhook-benchmark.sh  test-webhook-local.sh
benchmarks/baselines/: webhook-v0.1.0.json
benchmarks/k6/: webhook-load-test.js
bundle/manifests/: stellar-operator.clusterserviceversion.yaml
bundle/metadata/: annotations.yaml
charts/stellar-operator/: values.schema.json  values.yaml
charts/stellar-operator/templates/: externalsecret.yaml  secret.yaml  webhook.yaml
config/: README.md
config/dev/: kubeconfig-dev.yaml
config/manifests/: kustomization.yaml
config/manifests/bases/: stellar-operator.clusterserviceversion.yaml
config/samples/: test-stellarnode.yaml
docs/: EDGE_CASES.md  FORMAL_VERIFICATION.md  PQC_READINESS.md  WEBHOOK_BENCHMARK_SUMMARY.md  deploy-olm.md  wasm-webhook.md  webhook-benchmarking.md
docs/adr/: 0001-wasm-admission-webhook.md  README.md
examples/: broken.yaml  cross-cluster-direct-ip.yaml  cross-cluster-external-dns.yaml  cross-cluster-istio.yaml  cross-cluster-submariner.yaml  custom-metrics-hpa.yaml  cve-handling-examples.yaml  horizon-canary-example.yaml  peer-discovery-example.yaml  vpa-scaling.yaml
examples/plugins/example-validator/: Cargo.toml
examples/plugins/example-validator/src/: lib.rs
examples/plugins/image-registry-validator/: Cargo.toml  README.md  build.sh
examples/plugins/image-registry-validator/src/: lib.rs
formal_verification/: README.md  StellarReconciler.tla  StellarReconcilerChecks.tla  StellarReconciler_Model.cfg
monitoring/: SOROBAN_DASHBOARD_GUIDE.md  generate-soroban-dashboard.py  grafana-dashboard.json  grafana-soroban.json
results/: benchmark-summary.json  regression-report.json
src/: error.rs  kubectl_plugin.rs  lib.rs  main.rs
src/backup/: scheduler_test.rs
src/carbon_aware/: api.rs  mod.rs  scheduler.rs  types.rs
src/controller/: archive_health.rs  captive_core.rs  conditions.rs  cve.rs  cve_reconciler.rs  cve_test.rs  dr.rs  finalizers.rs  health.rs  kms_secret.rs  metrics.rs  mod.rs  mtls.rs  oci_snapshot.rs  peer_discovery_test.rs  read_pool.rs  reconciler.rs  reconciler_test.rs  remediation.rs  remediation_test.rs  resources.rs  resources_test.rs  service_mesh.rs  traffic.rs  traffic_test.rs  vpa.rs  vsl.rs
src/controller/maintenance/: bloat.rs  controller.rs  coordinator.rs  mod.rs
src/controller/quorum/: analyzer.rs  error.rs  graph.rs  mod.rs  scp_client.rs  types.rs  uptime.rs
src/crd/: mod.rs  read_replica.rs  seed_secret.rs  service_mesh.rs  stellar_node.rs  tests.rs  types.rs
src/rest_api/: custom_metrics.rs  handlers.rs  mod.rs  server.rs  sustainability.rs
src/scheduler/: core.rs  mod.rs  scoring.rs
src/webhook/: mod.rs  mutation.rs  runtime.rs  server.rs  types.rs
tests/: dry_run_test.rs  e2e_kind.rs  service_mesh_e2e_test.rs
tests/chaos/: 02-network-partition.yaml  03-api-latency.yaml  README.md  run-chaos-tests.sh
