[package]
name = "stellar-k8s"
version = "0.1.0"
edition = "2021"
authors = ["Stellar K8s Contributors"]
description = "Cloud-Native Kubernetes Operator for Stellar Infrastructure"
license = "Apache-2.0"
repository = "https://github.com/stellar/stellar-k8s"

[dependencies]
# Kubernetes client and operator framework
kube = { version = "0.94", features = ["runtime", "derive", "unstable-runtime", "admission"] }
kube-runtime = { version = "0.94", features = ["unstable-runtime"] }
k8s-openapi = { version = "0.22", default-features = false, features = ["v1_30"] }
# kube-leader-election temporarily disabled due to k8s-openapi version conflict
# TODO: Re-enable once versions are aligned

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Schema generation for CRDs
schemars = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Hostname for leader election
hostname = "0.4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"

# OpenTelemetry for distributed tracing
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic", "http-proto"] }

# HTTP client for health checks
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# REST API (optional)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["trace"], optional = true }

# Metrics
prometheus-client = { version = "0.22", optional = true }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rustls-pemfile = "2.2.0"
rcgen = "0.11"
clap = { version = "4.5", features = ["derive", "env"] }
rustls = "0.23"
rustls-pki-types = "1.14.0"

# Wasm runtime for custom validation plugins
wasmtime = { version = "17", optional = true }
wasmtime-wasi = { version = "17", optional = true }

# Additional crypto for webhook TLS
rustls = { version = "0.22", optional = true }
rustls-pemfile = { version = "2", optional = true }
tokio-rustls = { version = "0.25", optional = true }

# Base64 for Wasm plugin loading
base64 = { version = "0.21", optional = true }

# SHA256 for plugin integrity verification
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

[features]
default = ["rest-api", "metrics"]
rest-api = ["axum", "tower", "tower-http"]
metrics = ["prometheus-client", "once_cell"]
admission-webhook = ["wasmtime", "wasmtime-wasi", "rustls", "rustls-pemfile", "tokio-rustls", "base64", "sha2", "hex", "axum", "tower", "tower-http"]

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "stellar-operator"
path = "src/main.rs"
