[package]
name = "example-validator"
version = "0.1.0"
edition = "2021"
description = "Example StellarNode validation plugin for the Wasm webhook"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
